Record why the fast path stays pure Java
Going below JDBC was measured rather than assumed. The library bundled in
duckdb_jdbc exports 409 duckdb_* symbols, so the C API is reachable, and
reading its vectors directly is the fastest path available. Reading a
million rows of three numeric columns:

  JDBC, row by row                ~450 ms   Java 8+
  Arrow, boxed                      40 ms   Java 17+
  Arrow, primitive accessors        21 ms   Java 17+   <- ships
  JNA, zero-copy buffers            20 ms   Java 8+
  JNI, hand written               9-13 ms   Java 8+    native binaries
  Foreign Function and Memory        7 ms   Java 22+

Two of the findings were surprises. JDBC is not the latency bottleneck: a
prepared point lookup is 211 microseconds through JDBC and 201 straight
through the C API, because the cost is DuckDB planning and executing. And
JNI matches FFM, while JNA is twice as slow as both - the difference is
libffi dispatch across roughly 4,000 calls per million rows, not memory
access, since JNI and JNA hand back the same direct ByteBuffer.

Java 17 stays the floor because 17 and 21 are the LTS releases enterprises
run. That rules out FFM, which is only final in 22. It does not rule out
JNI, but shipping signed native binaries for five platforms works against
the same enterprise adoption that motivates the 17 floor, and 2x over Arrow
does not pay for it.

FFM remains worth adding later as an optional module for 22+, since it costs
nothing to distribute. JNI is worth revisiting only for Java UDFs and
nested-type writes, which no pure-Java path can reach at any Java version.